--- a/app/src/main/res/layout/activity_main_recycler_item_additional.xml
+++ b/app/src/main/res/layout/activity_main_recycler_item_additional.xml
@@ -12,8 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Jak Wam się podoba?"
+        android:text="Przesuwaliście elementy?"
         android:textColor="@color/colorAccent"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +26,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
-        android:text="Jest spoko"
+        android:text="Tak"
         android:textColor="@color/colorAccentDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="20dp"
-        android:text="Mogło być lepiej"
+        android:text="Nie"
         android:textColor="@color/colorAccentDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
