detailed view done

--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -22,8 +22,10 @@
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
+        android:paddingRight="120dp"
         android:text="TextView"
         android:textColor="@color/colorAccent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
